--- a/js/style.scss
+++ b/js/style.scss
@@ -2837,6 +2837,9 @@ ol li:before {
     z-index: 1;
     margin-top: -50px;
     margin-left: -25px;
+    width: 110px;
+    height: 110px;
+
 }
 
 .adventure-block ul li .title {
