--- a/js/style.scss
+++ b/js/style.scss
@@ -7519,9 +7519,11 @@ body > .jcf-select-drop.jcf-drop-flipped {
     }
 }
 
-body.page-11491 {
-    .visual .img-holder img, .visual .img-frame img {
-        display: inline !important;
-        width: 33% !important;
-    }
-}
+// .page-11491 {
+//     .img-frame {
+//         img {
+//             display: inline !important;
+//             width: 33% !important;
+//         }
+//     }
+// }
