--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
    4. Styles for responsive breakpoints
    ---------------------------------------------------------*/
 
-.container:after,
+.container:after, .clear,
 .dropdown .widget:after,
 .visual:after,
 .slideshow:after,
