Header, Footer, hiding Rest Week from navs

--- a/views/footer.twig
+++ b/views/footer.twig
@@ -31,7 +31,7 @@
 			<div class="grid--one grid--sm-fourth">
 				<strong><a class="font--sans text--uppercase letter--2" href="/events/">Events</a></strong>
 				<ul>
-					{{function('wp_list_pages', "title_li=&child_of=10&depth=1")}}
+					{{function('wp_list_pages', "title_li=&child_of=10&depth=1&exclude=54")}}
 				</ul>
 				<i class="icon-social--twitter" data-grunticon-embed></i>
 			</div>
