--- a/scss/sponsors.scss
+++ b/scss/sponsors.scss
@@ -206,8 +206,7 @@
         background-repeat: no-repeat;
 
         @include media($screen-lg) {
-            background-size: 100%;
-
+            background-size: contain;
         }
     }
 
