FTF-4 Updating Build Environment

--- a/scss/color.scss
+++ b/scss/color.scss
@@ -22,7 +22,11 @@
     color: $black;
 }
 
+.color--gray {
+    color: $gray;
+}
+
 .hrgray {
     border: 0;
-    border-bottom: 1px solid #C4C4C4;
+    border-bottom: 1px solid $gray;
 }
