--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -21,6 +21,7 @@
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         
         {% include 'components/favicon.twig' %}
+        {% include 'components/grunticon.twig' %}
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
