--- a/views/page-home.twig
+++ b/views/page-home.twig
@@ -9,6 +9,8 @@
 		{% include 'components/sections/section--about-generic.twig' %}
 	{% else %}
 		{% include 'components/sections/section--header-featured.twig' %}
+		{% include 'components/sections/section--about-featured.twig' %}
+
 	{% endif %}
 	{% include 'components/sections/section--home-news.twig' %}
 	{% include 'components/sections/section--sponsors.twig' %}
