--- a/scss/section--header-generic.scss
+++ b/scss/section--header-generic.scss
@@ -35,7 +35,7 @@
             width: 100%;
             z-index: 101;
             height: 100%;
-            background: url(images/lines.svg);
+            background: url(../images/lines.svg);
             background-size: 220vw;
             background-position: center;
         }
